Revert "Remove debug line"
This reverts commit 761b5002513530631a3377bfcb4ced83246643db.

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -309,6 +309,10 @@
                     {% endfor %}
                 </tbody>
             </table>
+            <div>
+                test:<br />
+                {{ owned }}
+            </div>
             <!-- pagination nav -->
             {% if collection.has_other_pages %}
                 <ul class="pagination">
