--- a/theme/templates/pages/page.html
+++ b/theme/templates/pages/page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load mezzanine_tags keyword_tags inplace_edit%}
+{% load mezzanine_tags keyword_tags%}
 
 {% block meta_title %}{{ page.meta_title }}{% endblock %}
 
@@ -16,7 +16,6 @@
 {% endmetablock %}{% endblock %}
 
 {% block title %}
-{#{% inplace_edit "page.title|linebreaksbr" %}#}
 {{ page.title|linebreaksbr }}
 {% endblock %}
 
