--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -2,13 +2,13 @@
 {% spaceless %}
 
 <ul class="nav navbar-nav">
-    <li {% if request.get_full_path == "/my-resources/" %}class="active"{% endif %} id="dropdown-menu-my-resources">
+    <li {% if request.path == "/my-resources/" %}class="active"{% endif %} id="dropdown-menu-my-resources">
         <a href="/my-resources/">My Resources</a>
     </li>
-    <li {% if request.get_full_path == "/search/" %}class="active"{% endif %} id="dropdown-menu-search">
+    <li {% if request.path == "/search/" %}class="active"{% endif %} id="dropdown-menu-search">
         <a href="/search/">Discover</a>
     </li>
-    <li {% if request.get_full_path == "/collaborate/" %}class="active"{% endif %} id="dropdown-menu-collaborate">
+    <li {% if request.path == "/collaborate/" %}class="active"{% endif %} id="dropdown-menu-collaborate">
         <a href="/collaborate/">Collaborate</a>
     </li>
     <li class="" id="dropdown-menu-https:--www.hydroshare.org-apps-">
