Handle text overflow in profile badge in navbar

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -804,10 +804,17 @@ li.account p{
     border-bottom-left-radius: 4px
 }
 
-#profile-menu #profile-menu-fullname { font-weight: bold; }
+#profile-menu #profile-menu-fullname {
+	font-weight: bold;
+}
 
 #profile-menu > .dropdown-toggle:hover, #profile-menu > .dropdown-toggle:focus {
     background:none;
+}
+
+#profile-menu #profile-menu-email, #profile-menu #profile-menu-fullname {
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .display-none {
