--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -133,9 +133,9 @@
                                             {% endif %}
                                         </div>
                                         <div class="col-sm-8">
-                                            <strong id="profile-menu-fullname">{{ request.user.first_name }} {% if request.user.userprofile.middle_name %}{{ request.user.userprofile.middle_name }} {% endif %}{{ request.user.last_name }}</strong>
+                                            <strong id="profile-menu-fullname" title="{{ request.user|best_name }}">{{ request.user|best_name }}</strong>
                                             {% if request.user.email %}
-                                                <div id="profile-menu-email" class="text-muted">{{ request.user.email }}</div>
+                                                <div id="profile-menu-email" class="text-muted" title="{{ request.user.email }}">{{ request.user.email }}</div>
                                             {% endif %}
                                         </div>
                                     </div>
