--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1584,7 +1584,7 @@
                                 {% else %}
                                     <span>{{ rights.statement|linebreaks }}</span>
                                 {% endif %}
-                                <span class="rights-url"><a href="{{ rights.url }}">&nbsp{{ rights.url }}</a></span>
+                                <span class="rights-url"><a href="{{ rights.url }}">&nbsp;{{ rights.url }}</a></span>
                                 <p>
                                 In copying this resource you are ethically bound to respect the terms of this license.
                                 Please confirm that you accept the terms of this license below before you can copy this resource.
@@ -1622,7 +1622,7 @@
                 {% else %}
                     <span>{{ rights.statement|linebreaks }}</span>
                 {% endif %}
-                <span class="rights-url"><a href="{{ rights.url }}">&nbsp{{ rights.url }}</a></span>
+                <span class="rights-url"><a href="{{ rights.url }}">&nbsp;{{ rights.url }}</a></span>
                 <p style="margin-top: 5px">
                 In downloading this resource contents you are ethically bound to respect the terms of this license.
                 Please confirm that you accept the terms of this license below before you can do any downloads for this resource.
@@ -1656,7 +1656,7 @@
                 {% else %}
                     <span>{{ rights.statement|linebreaks }}</span>
                 {% endif %}
-                <span class="rights-url"><a href="{{ rights.url }}">&nbsp{{ rights.url }}</a></span>
+                <span class="rights-url"><a href="{{ rights.url }}">&nbsp;{{ rights.url }}</a></span>
                 <p style="margin-top: 5px">
                 In downloading this resource contents you are ethically bound to respect the terms of this license.
                 Please confirm that you accept the terms of this license below before you can do any downloads for this resource.
