--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1763,20 +1763,23 @@
                                     <tr id="templateRow">
                                         <td>
                                             <table class="user-scope">
-                                                <td>
-                                                    <div class="profile-pic-thumbnail round-image user-icon"></div>
-                                                    <div class="group-image-wrapper extra-small">
-                                                        <div class="group-image-extra-small group-preview-image-default"
-                                                             style="background-image: url({{ STATIC_URL }}img/home-page/step4.png)"></div>
-                                                    </div>
-                                                </td>
-                                                <td>
-                                                    <div data-col="name" class="user-name">
-                                                        <a href="#"></a>
-                                                    </div>
-                                                    <div class="badge you-flag">You</div>
-                                                    <div data-col="user-name" class="user-username-content"></div>
-                                                </td>
+                                                <tr>
+                                                    <td>
+                                                        <div class="profile-pic-thumbnail round-image user-icon"></div>
+                                                        <div class="group-image-wrapper extra-small">
+                                                            <div class="group-image-extra-small group-preview-image-default"
+                                                                 style="background-image: url({{ STATIC_URL }}img/home-page/step4.png)">
+                                                            </div>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div data-col="name" class="user-name">
+                                                            <a href="#"></a>
+                                                        </div>
+                                                        <div class="badge you-flag">You</div>
+                                                        <div data-col="user-name" class="user-username-content"></div>
+                                                    </td>
+                                                </tr>
                                             </table>
                                         </td>
 
@@ -1902,7 +1905,7 @@
                                             <div class="col-xs-6">
                                                 <a id="btn-confirm-add-access"
                                                    class="btn btn-add-access btn-success glyphicon glyphicon-plus"><span
-                                                        class="button-label">&nbspAdd</span></a>
+                                                        class="button-label">&nbsp;Add</span></a>
                                             </div>
                                         </div>
                                     </div>
