--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -96,8 +96,9 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 
 .dropdown-menu.profile-card {
     width: 350px;
-    height: unset;
+    height: auto;
     margin: unset;
+
 }
 
 .profile-card .flex > div {
