--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -4,15 +4,19 @@
 
 {% if branch_level == 0 %}
 <ul class="nav navbar-nav">
+    <li class="active" id="dropdown-menu-home">
+        <a href="/dashboard">{% trans "Home" %}</a>
+    </li> -->
     {% for page in page_branch %}
     {% if not has_home and page.is_primary and forloop.first %}
+        <!--
     <li class="{% if on_home %} active{% endif %}" id="dropdown-menu-home">
         <a href="{% url "home" %}">{% trans "Home" %}</a>
-    </li>
+    </li> -->
     {% endif %}
     {% if page.in_menu %}
     <li class="{% if page.has_children_in_menu %}dropdown{% endif %}{% if page.is_current_or_ascendant %} active{% endif %}"
-        id="dropdown-menu-{{ page.html_id }}">
+        id="dropdown-menuPPP-{{ page.html_id }}">
         <a href="{{ page.get_absolute_url }}">
             {{ page.title }}
             {% if page.has_children_in_menu %}<span class="caret"></span>{% endif %}
