--- a/theme/templates/pages/community.html
+++ b/theme/templates/pages/community.html
@@ -11,8 +11,8 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="collaborate-nav">
-                        <a href="{% url "collaborate" %}" class="collaborate-nav-item">This might have two nav items for groups and communities</a>
-                        <a href="{% url "my_groups" %}" class="collaborate-nav-item">My Communities</a>
+                        <a href="{% url "my_groups" %}" class="collaborate-nav-item">Groups</a>
+                        <a href="{% url "community" %}" class="collaborate-nav-item active">Communities</a>
                     </div>
                 </div>
             </div>
@@ -31,9 +31,7 @@
                     <div class="alert alert-warning alert-dismissible" role="alert">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
                                 aria-hidden="true">&times;</span></button>
-                        This group is set to <strong>inactive.</strong> Only owners of the group have access. Resources
-                        cannot
-                        be shared with the group and other users cannot be invited.
+                        Recently changed resources will be displayed here
                         <hr>
                         <span class="glyphicon glyphicon-question-sign"></span>
                         <small> Click on the restore button ( <span class="glyphicon glyphicon-retweet"></span> ) below
@@ -103,7 +101,7 @@
 {#                {% if profile_user.is_group_owner or profile_user.is_group_editor or profile_user.is_group_viewer or group.gaccess.public%}#}
                 <li role="presentation">
                     <a href="#members" aria-controls="members" role="tab" data-toggle="tab">
-                        <i class="glyphicon glyphicon-user"></i> MEMBERS</a>
+                        PUBLIC</a>
                 </li>
 {#                {% endif %}#}
             </ul>
@@ -184,7 +182,7 @@
                                 </form>
                             {% endif %}
                                 {% else %}
-                                <h4><i>This group is currently inactive.</i></h4>
+                                <h4><i>[Recent Activity]</i></h4>
                             {% endif %}
                         {% endif %}
                         </div>
@@ -202,22 +200,6 @@
                                     <br>
                                 {% endif %}
                             {% endif %}
-                            <table id="members-filter" class="table-user-contributions table table-hover">
-                                <tbody>
-                                    <tr class="active" data-filter-by="all">
-                                        <td><span>All</span></td>
-                                        <td><span class="badge" data-filter-by='All'>0</span></td>
-                                    </tr>
-                                     <tr data-filter-by="edit-user">
-                                        <td><span>Owners</span></td>
-                                        <td><span class="badge" data-filter-by='Owners'>0</span></td>
-                                    </tr>
-                                    <tr data-filter-by="pending">
-                                        <td><span>Pending</span></td>
-                                        <td><span class="badge" data-filter-by='Pending'>0</span></td>
-                                    </tr>
-                                </tbody>
-                            </table>
                         </div>
                         <div class="col-sm-12 col-md-9">
                         {% for group in groups_view %}
@@ -735,56 +717,6 @@
                         </div>
 
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-        <!-- Leave Group Modal -->
-        <div class="modal fade" id="leave-group-dialog" tabindex="-1" role="dialog"
-             aria-labelledby="Leave">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal"
-                                aria-label="Close"><span aria-hidden="true">&times;</span>
-                        </button>
-                        <h4 class="modal-title" id="Leave">Leave Group</h4>
-                    </div>
-                    <form action="/hsapi/_internal/unshare-group-with-user/{{ group.id }}/{{ user.id }}/">
-                        <div class="modal-body">
-                            <h5>Are you sure you want to leave this group?</h5>
-                        </div>
-
-                        <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary">Confirm</button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-        <!-- Delete/Inactive Group Modal -->
-        <div class="modal fade" id="delete-group-dialog" tabindex="-1" role="dialog"
-             aria-labelledby="Delete">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal"
-                                aria-label="Close"><span aria-hidden="true">&times;</span>
-                        </button>
-                        <h4 class="modal-title" id="Delete">Delete Group</h4>
-                    </div>
-                    <form action="/hsapi/_internal/delete-user-group/{{ group.id }}">
-                        <div class="modal-body">
-                            <h5>Are you sure you want to delete this group? If you decide to delete it, you can restore it later.</h5>
-                        </div>
-
-                        <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary">Confirm</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         </div>
                     </form>
