--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -13,6 +13,7 @@
                     <div class="collaborate-nav">
                         <a href="{% url "collaborate" %}" class="collaborate-nav-item">Find Groups</a>
                         <a href="{% url "my_groups" %}" class="collaborate-nav-item">My Groups</a>
+                        <a href="{% url "community" %}" class="collaborate-nav-item">Community</a>
                     </div>
                 </div>
             </div>
