--- a/theme/templates/pages/community.html
+++ b/theme/templates/pages/community.html
@@ -2,7 +2,7 @@
 {% load comment_tags  %}
 
 {% block extra_css %}
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.dataTables.min.css">
+{#  this is at the bottom of page  <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.dataTables.min.css">#}
 {% endblock %}
 
 {% block main %}
