--- a/theme/templates/resource-landing-page/references.html
+++ b/theme/templates/resource-landing-page/references.html
@@ -164,15 +164,17 @@ Click this button to add a relationship to another resource, external website, o
                             {% endif %}
                         </td>
                         <td class="dataset-details">{{ relation.value|urlize }}</td>
-                        <td style="min-width: 120px;">
-                            <span data-toggle="modal" data-placement="auto" title="Edit"
-                               class="glyphicon glyphicon-pencil icon-blue icon-button table-icon"
-                               data-target="#edit-relation-dialog_{{ relation.id }}">
-                            </span>
-                            <span data-toggle="modal" data-placement="auto" title="Remove"
-                               class="glyphicon glyphicon-trash table-icon icon-button btn-remove"
-                               data-target="#delete-relation-element-dialog{{ relation.id }}"></span>
-                        </td>
+                        {% if relation.type != "isVersionOf" %}
+                            <td style="min-width: 120px;">
+                                <span data-toggle="modal" data-placement="auto" title="Edit"
+                                   class="glyphicon glyphicon-pencil icon-blue icon-button table-icon"
+                                   data-target="#edit-relation-dialog_{{ relation.id }}">
+                                </span>
+                                <span data-toggle="modal" data-placement="auto" title="Remove"
+                                   class="glyphicon glyphicon-trash table-icon icon-button btn-remove"
+                                   data-target="#delete-relation-element-dialog{{ relation.id }}"></span>
+                            </td>
+                        {% endif %}
                     </tr>
                 {% endif %}
             {% endfor %}
